# pico-sandbox

./: .gitignore  CMakeLists.txt
lib/: fft.c
lib/include/: complex.h  fft.h
platform/: main.c
platform/drivers/: gpio.c  pl011.c
platform/drivers/arm/: dwt.c  irq.c
platform/drivers/riscv/: csr.c  irq.c
platform/hw/: _newlib.c  linker.ld
platform/hw/arm/: _crt0.c
platform/hw/riscv/: _crt0.c  _init.c
platform/include/: pl011.h  time.h
platform/include/arm/: dwt.h  irq.h
platform/include/arm/rp2350/: m33.h
platform/include/riscv/: csr.h  irq.h
platform/include/rp2350/: pll.h  sio.h  uart.h  xosc.h
platform/include/utils/: cpu.h  fft.h
platform/utils/: fft.c
scripts/: analysis.py  byte_dump.py  cos_lut.py  fft_payload.py
src/: main.c  test.c
src/drivers/: gpio.c  gpio.h  led.c  pl011.c  pl011.h  time.c  time.h  utils.h
src/drivers/arm/: dwt.c
src/drivers/riscv/: csr.c
src/include/: dwt.h  gpio.h  pl011.h
src/include/util/: log.h
src/include/utils/: cpu.h  log.h
src/rp2350/: _newlib.c  linker.ld
src/rp2350/arm/: _crt0.c  _init.c
src/rp2350/include/rp2350/: clocks.h  io_bank0.h  pads_bank0.h  pll.h  resets.h  ticks.h  timer.h  uart.h  xosc.h
src/rp2350/include/rp2350/arm/: m33.h
src/rp2350/riscv/: _crt0.c  _init.c
src/utils/: cpu_utils.h  string_utils.h
tools/: elf2uf2
